force-app/main/default/objects/IPL_Treatment_s__c/IPL_Treatment_s__c.object-meta.xml
<CustomObject>
    <label>IPL Treatment(s)</label>
    <nameField>
        <label>IPL Treatment(s) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPL Treatments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>