force-app/main/default/objects/IPL_Treatment_s__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face</fullName>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Upper Arms</fullName>
            </value>
            <value>
                <fullName>Upper Back</fullName>
            </value>
            <value>
                <fullName>Upper Legs</fullName>
            </value>
            <value>
                <fullName>Lower Arms</fullName>
            </value>
            <value>
                <fullName>Lower Back</fullName>
            </value>
            <value>
                <fullName>Lower Legs</fullName>
            </value>
            <value>
                <fullName>Hands</fullName>
            </value>
            <value>
                <fullName>Cherry Angiomas</fullName>
            </value>
            <value>
                <fullName>_ Broken Capillaries</fullName>
            </value>
            <value>
                <fullName>Shoulders</fullName>
            </value>
            <value>
                <fullName>Abdomen</fullName>
            </value>
            <value>
                <fullName>Spot TX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>