force-app/main/default/objects/IPL_Treatment_s__c/fields/IPL_Treatment__c.field-meta.xml
<CustomField>
    <fullName>IPL_Treatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IPL Treatment</label>
    <referenceTo>IPL_Treatment__c</referenceTo>
    <relationshipLabel>IPL Treatments</relationshipLabel>
    <relationshipName>IPL_Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>