force-app/main/default/objects/IPL_Treatment_s__c/fields/Sunscreen_App__c.field-meta.xml
<CustomField>
    <fullName>Sunscreen_App__c</fullName>
    <label>Sunscreen App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>